Annotations on data preprocessing

--- a/Notebooks/NLP/Copy_of_text_classification.ipynb
+++ b/Notebooks/NLP/Copy_of_text_classification.ipynb
@@ -209,10 +209,12 @@
       "source": [
         "url = \"https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\"\n",
         "\n",
+        "# adds a dir for the dataset\n",
         "dataset = tf.keras.utils.get_file(\"aclImdb_v1.tar.gz\", url,\n",
         "                                    untar=True, cache_dir='.',\n",
         "                                    cache_subdir='')\n",
         "\n",
+        "# getting the full path to the directory\n",
         "dataset_dir = os.path.join(os.path.dirname(dataset), 'aclImdb')"
       ],
       "execution_count": 5,
@@ -230,25 +232,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "355CfOvsV1pl"
+        "id": "355CfOvsV1pl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09046082-89c0-4f84-bd3a-49ba2e79901f"
       },
       "source": [
+        "# listing all the sub paths in the directory\n",
         "os.listdir(dataset_dir)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['train', 'test', 'README', 'imdbEr.txt', 'imdb.vocab']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7ASND15oXpF1"
+        "id": "7ASND15oXpF1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "771e3750-2954-4eb5-8eab-5e709333b951"
       },
       "source": [
         "train_dir = os.path.join(dataset_dir, 'train')\n",
         "os.listdir(train_dir)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['unsupBow.feat',\n",
+              " 'urls_pos.txt',\n",
+              " 'urls_neg.txt',\n",
+              " 'labeledBow.feat',\n",
+              " 'pos',\n",
+              " 'urls_unsup.txt',\n",
+              " 'neg',\n",
+              " 'unsup']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -262,15 +306,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R7g8hFvzWLIZ"
+        "id": "R7g8hFvzWLIZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "865d4049-a64c-431c-e093-79043bda8bf4"
       },
       "source": [
         "sample_file = os.path.join(train_dir, 'pos/1181_9.txt')\n",
         "with open(sample_file) as f:\n",
         "  print(f.read())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Rachel Griffiths writes and directs this award winning short film. A heartwarming story about coping with grief and cherishing the memory of those we've loved and lost. Although, only 15 minutes long, Griffiths manages to capture so much emotion and truth onto film in the short space of time. Bud Tingwell gives a touching performance as Will, a widower struggling to cope with his wife's death. Will is confronted by the harsh reality of loneliness and helplessness as he proceeds to take care of Ruth's pet cow, Tulip. The film displays the grief and responsibility one feels for those they have loved and lost. Good cinematography, great direction, and superbly acted. It will bring tears to all those who have lost a loved one, and survived.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -311,7 +367,7 @@
         "remove_dir = os.path.join(train_dir, 'unsup')\n",
         "shutil.rmtree(remove_dir)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -330,7 +386,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nOrK-MTYaw3C"
+        "id": "nOrK-MTYaw3C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f412ce25-e4b6-44d3-9e81-080ec8c6cd78"
       },
       "source": [
         "batch_size = 32\n",
@@ -343,8 +403,17 @@
         "    subset='training', \n",
         "    seed=seed)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 25000 files belonging to 2 classes.\n",
+            "Using 20000 files for training.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -358,16 +427,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "51wNaPPApk1K"
+        "id": "51wNaPPApk1K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30b8df46-18f4-4fb1-fc86-3696108b7e87"
       },
       "source": [
+        "# generate 1 batch\n",
         "for text_batch, label_batch in raw_train_ds.take(1):\n",
+        "  # show the review and the review of 3 samples from the batches\n",
         "  for i in range(3):\n",
         "    print(\"Review\", text_batch.numpy()[i])\n",
         "    print(\"Label\", label_batch.numpy()[i])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Review b'Great movie - especially the music - Etta James - \"At Last\". This speaks volumes when you have finally found that special someone.'\n",
+            "Label 0\n",
+            "Review b\"I am shocked. Shocked and dismayed that the 428 of you IMDB users who voted before me have not given this film a rating of higher than 7. 7?!?? - that's a C!. If I could give FOBH a 20, I'd gladly do it. This film ranks high atop the pantheon of modern comedy, alongside Half Baked and Mallrats, as one of the most hilarious films of all time. If you know _anything_ about rap music - YOU MUST SEE THIS!! If you know nothing about rap music - learn something!, and then see this! Comparisons to 'Spinal Tap' fail to appreciate the inspired genius of this unique film. If you liked Bob Roberts, you'll love this. Watch it and vote it a 10!\"\n",
+            "Label 1\n",
+            "Review b'What a lovely heart warming television movie. The story tells of a little five year old girl who has lost her daddy and finds it impossible to cope. Her mother is also very distressed ..only a miracle can alleviate their unhappiness.Which all viewers hope will materialise. Samantha Mathis is brilliant as the little girl\\'s mum ,as she was as the nanny in\" Jack and Sarah\",worth watching if you like both Samantha Mathis and happy; year tear jerking movies! Ellen Burstyn is, as, always a delightful grandmother in this tender and magnificently acted movie. Jodelle Ferland (the little five year old) is charming and a most convincing young actress. The film is based on a true story which makes it so touching.\"Mermaid\" is a tribute to the milk of human kindness which is clearly illustrated and clearly is still all around us in this difficult world we live in. \"Mermaid\" gives us all hope ,by realising that there a lot of lovely people in the world with lot\\'s of love to give. James Robson Glasgow Scotland U.K.'\n",
+            "Label 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -383,14 +471,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MlICTG8spyO2"
+        "id": "MlICTG8spyO2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0d119ae2-ca60-4ba6-c1dd-7cb41946ecdd"
       },
       "source": [
+        "# note that raw_train_ds is a kind of Tensorflow-defined object called a BatchGenerator\n",
+        "# and it works similar to like a normal generator that comes built-in to Python\n",
         "print(\"Label 0 corresponds to\", raw_train_ds.class_names[0])\n",
         "print(\"Label 1 corresponds to\", raw_train_ds.class_names[1])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Label 0 corresponds to neg\n",
+            "Label 1 corresponds to pos\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -413,7 +516,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JsMwwhOoqjKF"
+        "id": "JsMwwhOoqjKF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cea9e6d0-d954-4db9-90a6-63c47ff3bc57"
       },
       "source": [
         "raw_val_ds = tf.keras.preprocessing.text_dataset_from_directory(\n",
@@ -423,21 +530,42 @@
         "    subset='validation', \n",
         "    seed=seed)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 25000 files belonging to 2 classes.\n",
+            "Using 5000 files for validation.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rdSr0Nt3q_ns"
+        "id": "rdSr0Nt3q_ns",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d21d19d-a89a-4212-c0e6-599dc0a6b91e"
       },
       "source": [
         "raw_test_ds = tf.keras.preprocessing.text_dataset_from_directory(\n",
         "    'aclImdb/test', \n",
         "    batch_size=batch_size)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 25000 files belonging to 2 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,7 +613,7 @@
         "                                  '[%s]' % re.escape(string.punctuation),\n",
         "                                  '')"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -514,7 +642,7 @@
         "    output_mode='int',\n",
         "    output_sequence_length=sequence_length)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -545,7 +673,7 @@
         "train_text = raw_train_ds.map(lambda x, y: x)\n",
         "vectorize_layer.adapt(train_text)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -567,24 +695,62 @@
         "  text = tf.expand_dims(text, -1)\n",
         "  return vectorize_layer(text), label"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XULcm6B3xQIO"
+        "id": "XULcm6B3xQIO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cde162e1-b03c-4445-caeb-6818338ae31c"
       },
       "source": [
         "# retrieve a batch (of 32 reviews and labels) from the dataset\n",
         "text_batch, label_batch = next(iter(raw_train_ds))\n",
         "first_review, first_label = text_batch[0], label_batch[0]\n",
         "print(\"Review\", first_review)\n",
+        "# this dict maps the binary label to the actual class name\n",
         "print(\"Label\", raw_train_ds.class_names[first_label])\n",
         "print(\"Vectorized review\", vectorize_text(first_review, first_label))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Review tf.Tensor(b'Belmondo is a tough cop. He goes after a big-time drug dealer (played by Henry Silva, normally a great villain - see \"Sharky\\'s Machine\"; but here he is clearly dubbed, and because of that he lacks his usual charisma). He goes to the scuzziest places of Paris and Marseilles, asks for some names, beats up some people, gets the names, goes to more scuzzy places, asks for more names, beats up more people, etc. The whole movie is punch after punch after punch. It seems that the people who made it had no other ambition than to create the French equivalent of \"Dirty Harry\". Belmondo, who was 50 here, does perform some good stunts at the beginning; apart from those, \"Le Marginal\" is a violent, episodic, trite, shallow and forgettable cop movie. (*1/2)', shape=(), dtype=string)\n",
+            "Label neg\n",
+            "Vectorized review (<tf.Tensor: shape=(1, 250), dtype=int64, numpy=\n",
+            "array([[   1,    7,    4, 1233, 1021,   27,  261,  101,    4,    1, 1525,\n",
+            "        6992,  248,   32, 1488,    1, 1659,    4,   86, 1011,   67,    1,\n",
+            "        1707,   18,  128,   27,    7,  688, 2396,    3,   84,    5,   12,\n",
+            "          27, 1453,   24,  616, 3314,   27,  261,    6,    2,    1, 1329,\n",
+            "           5, 1371,    3,    1, 1581,   15,   46, 1356, 3612,   56,   46,\n",
+            "          79,  201,    2, 1356,  261,    6,   50,    1, 1329, 1581,   15,\n",
+            "          50, 1356, 3612,   56,   50,   79,  532,    2,  211,   17,    7,\n",
+            "        2851,  101, 2851,  101, 2851,    9,  180,   12,    2,   79,   36,\n",
+            "          90,    9,   66,   57,   78, 5415,   70,    6,  916,    2,  800,\n",
+            "        4891,    5, 1678, 1347,    1,   36,   13, 1732,  128,  120, 3078,\n",
+            "          46,   49, 3274,   31,    2,  435,  948,   35,  143, 3519,    1,\n",
+            "           7,    4, 1097, 9578, 3092, 2056,    3, 2512, 1021,   17, 1105,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+            "           0,    0,    0,    0,    0,    0,    0,    0]])>, <tf.Tensor: shape=(), dtype=int32, numpy=0>)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -598,15 +764,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kRq9hTQzhVhW"
+        "id": "kRq9hTQzhVhW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "214425e4-d334-4949-d2ac-a0dfa4758600"
       },
       "source": [
         "print(\"1287 ---> \",vectorize_layer.get_vocabulary()[1287])\n",
         "print(\" 313 ---> \",vectorize_layer.get_vocabulary()[313])\n",
         "print('Vocabulary size: {}'.format(len(vectorize_layer.get_vocabulary())))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1287 --->  silent\n",
+            " 313 --->  night\n",
+            "Vocabulary size: 10000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -627,7 +807,7 @@
         "val_ds = raw_val_ds.map(vectorize_text)\n",
         "test_ds = raw_test_ds.map(vectorize_text)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -659,7 +839,7 @@
         "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
         "test_ds = test_ds.cache().prefetch(buffer_size=AUTOTUNE)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
