Implement code to train the model

--- a/Notebooks/Computer_Vision/Plant_Vision.ipynb
+++ b/Notebooks/Computer_Vision/Plant_Vision.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1NCn5b0HjEuuYobxS6Zy42GttHs4VZ-xw",
-      "authorship_tag": "ABX9TyPJ10ca/0ryqXabfQTTFumP",
+      "authorship_tag": "ABX9TyN5KvhAqtkC98166unyp8OR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,14 +138,14 @@
         "from tensorflow.keras.applications.inception_v3 import InceptionV3\n",
         "# Preprocessing Data \n",
         "from tensorflow.keras.preprocessing import image\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator,load_img\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img\n",
         "# ease of handling data, and visualizing data\n",
         "import numpy as np\n",
         "from glob import glob\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -164,13 +164,45 @@
         "id": "IRdg4GmPRZQw"
       },
       "source": [
-        "DATA_PATH = '/content/drive/MyDrive/Colab Notebooks/DS 2.4/Notebooks/Computer_Vision/new-plant-diseases-dataset'\n",
-        "TRAIN_PATH = os.path.join(DATA, '/train')\n",
-        "VAL_PATH = os.path.join(DATA, '/valid')\n",
-        "TEST_PATH = os.path.join(DATA, '/test')"
+        "DATA_PATH = '/content/drive/MyDrive/Colab-Notebooks/DS-2.4/Notebooks/Computer_Vision/new-plant-diseases-dataset'\n",
+        "TRAIN_PATH = f\"{DATA_PATH}/train\"\n",
+        "VAL_PATH = f\"{DATA_PATH}/valid\"\n",
+        "TEST_PATH = f\"{DATA_PATH}/test\""
       ],
-      "execution_count": 8,
+      "execution_count": 29,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ffAip_6t4xlD",
+        "outputId": "ee7d5a98-4859-480b-c048-8c7a28b2e9d6"
+      },
+      "source": [
+        "TEST_PATH"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'/content/drive/MyDrive/Colab-Notebooks/DS-2.4/Notebooks/Computer_Vision/new-plant-diseases-dataset/test'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -959,12 +991,167 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "9M_wo0RExq11"
+        "id": "c3B5cqSv0Rvl"
       },
       "source": [
-        ""
+        "## Set the Training Parameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TQq2IaCf0UTJ"
+      },
+      "source": [
+        "model.compile(\n",
+        "  loss='categorical_crossentropy',\n",
+        "  optimizer='adam',\n",
+        "  metrics=['accuracy']\n",
+        ")"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zKjtkCpc0i9j"
+      },
+      "source": [
+        "### Use Data Generators\n",
+        "Due to the size of the dataset (87K images), this step will make the training process more efficient.\n",
+        "\n",
+        "We scale all the data, and data augmentation is only on the training data (to make the model more robust)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ELJX4mkO03m2"
+      },
+      "source": [
+        "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
+        "                                   shear_range = 0.2,\n",
+        "                                   zoom_range = 0.2,\n",
+        "                                   horizontal_flip = True)\n",
+        "\n",
+        "test_datagen = ImageDataGenerator(rescale = 1./255)"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1ZAgeyAg1Kgj"
+      },
+      "source": [
+        "### Load the Train, Test, and Validation Sets\n",
+        "We scale all the data, and data augmentation is only on the training data (to make the model more robust)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yPzwtILU1N2e",
+        "outputId": "fa3f6538-bd4a-426a-e2f2-a7fac3c1e2bd"
+      },
+      "source": [
+        "# Make sure you provide the same target size as initialized for the image size\n",
+        "training_set = train_datagen.flow_from_directory(\n",
+        "    TRAIN_PATH, target_size=tuple(IMAGE_SIZE),\n",
+        "    batch_size=16, class_mode='categorical')"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 70342 images belonging to 38 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hJTlGoSb5ZWL",
+        "outputId": "d6ff8a2f-2886-4252-d167-4e6f027f22ac"
+      },
+      "source": [
+        "val_set = train_datagen.flow_from_directory(\n",
+        "    VAL_PATH, target_size=tuple(IMAGE_SIZE),\n",
+        "    batch_size=16, class_mode='categorical')"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 17601 images belonging to 38 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7C54QFig1g5t",
+        "outputId": "294c90b9-9d55-48e8-c190-de546a308064"
+      },
+      "source": [
+        "# TODO: organize testing data into folders by class\n",
+        "test_set = test_datagen.flow_from_directory(\n",
+        "    TEST_PATH, target_size=tuple(IMAGE_SIZE), batch_size=16,\n",
+        "    class_mode='categorical'\n",
+        ")"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 0 images belonging to 0 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jJEKyW4F5RAj"
+      },
+      "source": [
+        "## Train the Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CksGUbsN4lal"
+      },
+      "source": [
+        "history = model.fit(\n",
+        "  training_set,\n",
+        "  validation_data=val_set,\n",
+        "  epochs=10,\n",
+        "  steps_per_epoch=len(training_set),\n",
+        "  validation_steps=len(val_set)\n",
+        ")"
       ],
       "execution_count": null,
       "outputs": []
