Implement the architecture of the CIFAR10 classification model.

--- a/Notebooks/IntroToMLDL/CIFAR10_DNN_ZR.ipynb
+++ b/Notebooks/IntroToMLDL/CIFAR10_DNN_ZR.ipynb
@@ -6,7 +6,7 @@
       "name": "CIFAR10_DNN_ZR.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPJuj+nmucqNJmL7NTdyMhl",
+      "authorship_tag": "ABX9TyMG+Bz1A+ePCO7Ne/BmnmGe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -423,11 +423,11 @@
         "id": "T_5TScp1M3h4"
       },
       "source": [
-        "X_valid, X_train = X_train_full[:5000] / 255., X_train_full[5000:] / 255.\n",
-        "y_valid, y_train = y_train_full[:5000], y_train_full[5000:]\n",
+        "X_valid, X_train = X_train_full[40_000:] / 255., X_train_full[:40_000] / 255.\n",
+        "y_valid, y_train = y_train_full[40_000:], y_train_full[:40_000]\n",
         "X_test = X_test / 255."
       ],
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -524,9 +524,66 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xyW-hARXW-_w"
+      },
+      "source": [
+        "## Build the Model\n",
+        "\n",
+        "We'll bbuild this based on the spec in exercise #8 from Ch. 11 of Aurélien Géron's *Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow, 2nd Edition* (2019):\n",
+        "\n",
+        "- 20 hidden layers \n",
+        "- 100 neurons each \n",
+        "- He initialization and the ELU activation function"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "IpO-vN0sRDxv"
+      },
+      "source": [
+        "from functools import partial\n",
+        "\n",
+        "# make a wrapper around Keras' Dense layer, to make code more DRY\n",
+        "Dense = partial(keras.layers.Dense,\n",
+        "                activation=\"elu\",\n",
+        "                kernel_initializer=\"he_normal\")\n",
+        "\n",
+        "def manufacture_dense_layers(layers, neurons):\n",
+        "  \"\"\"Make as many Dense layers as specified.\n",
+        "\n",
+        "  Args:\n",
+        "    layers: int. The number of dense layers we'll instantiate.\n",
+        "    neurons: int. The number of neurons in each dense layer.\n",
+        "\n",
+        "  Returns: a fully connected sequential neural network, implemented in \n",
+        "           Keras' Sequential API\n",
+        "  \"\"\"\n",
+        "  return keras.models.Sequential([\n",
+        "    Dense(neurons) for _ in range(layers)\n",
+        "  ])\n",
+        "\n",
+        "# build the full model\n",
+        "IMAGE_WIDTH, IMAGE_HEIGHT = X_train.shape[1], X_train.shape[2] \n",
+        "model = keras.models.Sequential([\n",
+        "    keras.layers.Flatten(input_shape=[IMAGE_WIDTH, IMAGE_HEIGHT]),\n",
+        "    manufacture_dense_layers(20, 100),\n",
+        "    # we'll be doing sparse categorical classification\n",
+        "    Dense(10, activation=\"softmax\",\n",
+        "          # remember that Glorot initialization must be used \n",
+        "          # when softmax is the activation function\n",
+        "          kernel_initializer=\"glorot_uniform\")\n",
+        "])"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DSTqiQagZI8O"
       },
       "source": [
         ""
