Split the data for the IMDb model.

--- a/Notebooks/NLP/Efficient_IMDb_Classifier.ipynb
+++ b/Notebooks/NLP/Efficient_IMDb_Classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Efficient_IMDb_Classifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLp60m30K1Au+479Xwqn5K",
+      "authorship_tag": "ABX9TyM0XIefqv0+Eb0G9xxkiGNS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,11 @@
         "id": "GaCSJxoLblj8"
       },
       "source": [
+        "# Copied from Aurélien Géron's Ch. 13 notebook, \n",
+        "# for \"Hands-on Machine Learning with Scikit-Learn, Keras and Tensorflow\": \n",
+        "# https://colab.research.google.com/github/ageron/handson-ml2/blob/master/13_loading_and_preprocessing_data.ipynb\n",
+        "\n",
+        "\n",
         "# Python ≥3.5 is required\n",
         "import sys\n",
         "assert sys.version_info >= (3, 5)\n",
@@ -82,7 +87,7 @@
         "# To Download the Dataset (see Part 1)\n",
         "from pathlib import Path"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -135,12 +140,133 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vcXXxxhikKcc"
+      },
+      "source": [
+        "## Part 2: Splitting the Data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "M8x1He7jeov9"
       },
       "source": [
-        ""
+        "def review_paths(dirpath):\n",
+        "    \"\"\"Given a directory path, returns a list of all the text files present.\n",
+        "\n",
+        "    Args:\n",
+        "      dirpath: str. The path to a folder on the filesystem.\n",
+        "\n",
+        "    Returns: List[str]\n",
+        "\n",
+        "    Example Usage:\n",
+        "    review_paths(\"/root/.foo\") ==> [\"bar.txt\", \"foobar.txt\"]\n",
+        "    \"\"\"\n",
+        "    return [str(path) for path in dirpath.glob(\"*.txt\")]\n",
+        "\n",
+        "\n",
+        "# collect samples for each of the training data, divided by class\n",
+        "train_pos = review_paths(path / \"train\" / \"pos\")\n",
+        "train_neg = review_paths(path / \"train\" / \"neg\")\n",
+        "# do the same for test data (includes data we'll use for validation as well)\n",
+        "test_valid_pos = review_paths(path / \"test\" / \"pos\")\n",
+        "test_valid_neg = review_paths(path / \"test\" / \"neg\")"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jaztz67QjEeE",
+        "outputId": "0435399a-0323-4932-bddc-4fef18a51b93"
+      },
+      "source": [
+        "# verify we collected all the samples for each section\n",
+        "len(train_pos), len(train_neg), len(test_valid_pos), len(test_valid_neg)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(12500, 12500, 12500, 12500)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "luFRJz1Gjo9O"
+      },
+      "source": [
+        "# shuffle all the data for good measure\n",
+        "np.random.shuffle(test_valid_pos)\n",
+        "np.random.shuffle(train_pos)\n",
+        "np.random.shuffle(test_valid_neg)\n",
+        "np.random.shuffle(train_neg)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZNNAvwG1hm75"
+      },
+      "source": [
+        "To aid our training process, we'll create a separate validation set from 15,000 of the samples in the testing data \n",
+        "\n",
+        "The remaining 10,000 samples of the test data will be kept separate, and not seen by the model until after training is completed of course."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-GdAUYahj-mc"
+      },
+      "source": [
+        "# keep just 5,000 samples of pos and neg test data \n",
+        "test_pos = test_valid_pos[:5000]\n",
+        "test_neg = test_valid_neg[:5000]\n",
+        "# the rest of the data is for validation\n",
+        "valid_pos = test_valid_pos[5000:]\n",
+        "valid_neg = test_valid_neg[5000:]"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x5yhCEUckpHh"
+      },
+      "source": [
+        "## Part 3: Using the Data API\n",
+        "\n",
+        "Say hello to `tf.data`!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mzloct-Okl_M"
+      },
+      "source": [
+        "#"
       ],
       "execution_count": null,
       "outputs": []
